引入基本库

--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -1,19 +1,20 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
-
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.yanyonghua'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.aowang.baselib"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,9 +33,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    api project(':mylibrary')
+    api 'com.contrarywind:Android-PickerView:4.1.8'
 }
